# voicetestrs

./: .gitignore  Cargo.toml  PHASE3_NOTES.md  README.md  SESSION_RESUME.md  TAURI_SYSTEM_INTEGRATION.md  TAURI_TECHNICAL_NOTES.md  WHISPER_SETUP.md  background-research.md  background-tasks-plan.md  database-architecture.md  db-migration-plan.md  db-migration-progress.md  imports-feature.md  plan.md  process-and-port-plan.md  test_hotkey.rs  transcription-sync-plan.md
.claude/: settings.local.json
docs-archive/: TAURI_SYSTEM_INTEGRATION.md  UX-loading-state.md  background-research.md  db-migration-progress.md
src/: app.rs  lib.rs  main.rs  test_hotkey.rs
src/core/: audio.rs  config.rs  database.rs  mod.rs  notes.rs  sync.rs  transcription.rs
src/platform/: hotkeys.rs  mod.rs  notifications.rs  tray.rs  windows.rs
src/ui/: commands.rs  mod.rs
tauri/: cleanup-dev.js  cleanup-vite.bat  dev-server-pm2.js  dev-server-robust.js  ecosystem.config.js  index.html  package-lock.json  package.json  run-vite.js  start-dev-server.js  test-cleanup.js  vite.config.js
tauri/scripts/: dev.js  find-port.js
tauri/src/: App.css  App.jsx  BackgroundTasksTab.css  BackgroundTasksTab.jsx  index.css  main.jsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/migrations/: 001_initial.sql  002_fts.sql
tauri/src-tauri/notes/2025/2025-08-09/: 183149-voice-note.wav.json  183156-voice-note.wav.json  183202-voice-note.wav.json  183225-voice-note.wav.json
tauri/src-tauri/src/: commands.rs  db_commands.rs  lib.rs  port_manager.rs  process_manager.rs  queue_manager.rs
tauri/src-tauri/src/api/: mod.rs  queue.rs  transcriptions.rs
tauri/src-tauri/src/database/: mod.rs  models.rs  repository.rs  utils.rs
tauri/src-tauri/src/sync/: file_watcher.rs  imports.rs  mod.rs
tauri/src/lib/: api.js  database.js
whisper/: download-model.bat  download-model.ps1  download-model.sh  download.bat  download.sh
