[package]
name = "voicetextrs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Offline voice-to-notes transcription app with Whisper"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/voicetextrs"
keywords = ["audio", "transcription", "whisper", "voice", "notes"]
categories = ["multimedia::audio", "accessibility"]

[dependencies]
# Core Audio & Processing
cpal = "0.16.0"              # Cross-platform audio I/O
hound = "3.5.1"              # WAV file reading/writing
# whisper-rs = { version = "0.14.4", optional = true }  # Whisper bindings (requires CMake)

# Async Runtime
tokio = { version = "1.47.1", features = ["full"] }

# System Integration
tray-icon = "0.21.1"         # System tray
global-hotkey = "0.7.0"      # Global hotkeys
notify-rust = "4.11.7"       # Desktop notifications

# UI (Initially commented out - add when ready for Tauri)
# tauri = { version = "2.7.0", features = ["dialog", "notification", "system-tray"] }
# winit = "0.30.12"            # Window management (for Tauri)

# Utilities
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.136"
toml = "0.8"                 # For config files
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
thiserror = "2.0"            # Better error types
clap = { version = "4.5.43", features = ["derive"] }
directories = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.20"           # Lazy statics
parking_lot = "0.12"         # Better Mutex/RwLock

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3.14"            # Temporary files for testing
mockall = "0.13"             # Mocking for tests
criterion = "0.5"            # Benchmarking

[profile.release]
opt-level = 3                # Maximum optimizations
lto = true                   # Link-time optimization
codegen-units = 1            # Single codegen unit for better optimization
strip = true                 # Strip symbols for smaller binary
panic = "abort"              # Smaller binary, no unwinding

[profile.dev]
opt-level = 0
debug = true

# Benchmarks (uncomment when ready)
# [[bench]]
# name = "audio_processing"
# harness = false

[features]
default = []  # No default features for now
# whisper-bindings = ["dep:whisper-rs"]  # Use whisper-rs bindings (requires CMake)
whisper-binary = []          # Use external whisper binary
# cuda = ["whisper-rs/cuda"]   # CUDA acceleration
# metal = ["whisper-rs/metal"] # Metal acceleration (macOS)

# Package metadata for installers
[package.metadata.wix]
upgrade-guid = "YOUR-GUID-HERE-GENERATE-ONE"
path-guid = "YOUR-PATH-GUID-HERE"
license = false
eula = false